styled the details of the ip address

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,58 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
+*{
+  box-sizing: border-box;
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+body{
+  font-size: 18px;
+  font-family: 'Rubik', sans-serif;
+  background-color: hsl(0, 0%, 59%);
+}
+.container{
+  background-image: url(images/pattern-bg.png);
+  height: 40vh;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+.wrapper{
+  background-color: #fff;
+  width: 800px;
+  height: 120px;
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-column-gap: 3em;
+  position: absolute;
+  bottom: -60px;
+  left: 20%;
+  padding: 25px;
+  border-radius: 20px;
+
+}
+.wrapper div{
+  border-right: 1px solid hsl(0, 0%, 59%);
+  /* padding-right: 50px; */
+  
+}
+.wrapper div:last-child{
+  border-right: none ;
+}
+.wrapper div h2{
+   font-family: 'Rubik', sans-serif;
+   color: hsl(0, 0%, 59%);
+   font-weight: 500;
+   font-size: 13px;
+   text-transform: uppercase;
+   margin-bottom: 10px;
+   
+}
+.wrapper div p{
+  font-size: 19px;
+  font-family: 'Rubik', sans-serif;
+  font-weight: 500;
+  color: hsl(0, 0%, 17%);
+  margin-right: 10px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
